# mle-training

./: .gitignore  Dockerfile  Dockerfile:Zone.Identifier  README.md  env.yml  nonstandardcode.py  pyproject.toml
deploy/conda/: env.yml
docs/source/: conf.py  index.rst  src.rst
notebooks/: Untitled.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/: ingest_data.py  pipeline.py  score.py  train.py
tests/unit_tests/: test_basic.py
