[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_sanket_desu"
version = "0.0.1"
authors = [
  { name="Sanket", email="author@example.com" },
]
description = "sample package"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"